deploy: 701efbe86910ea62fafe380faf3fc29325ec6034

--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -57,10 +57,11 @@
       
       <!-- Desktop Navigation -->
       <nav class="desktop-nav" aria-label="Primary navigation">
+        <a href="/ai/services" class="nav-link">Services</a>
         <a href="/ai/courses" class="nav-link">Courses</a>
         <a href="/ai/projects" class="nav-link">Projects</a>
-        <a href="/ai/docs" class="nav-link">Documentation</a>
         <a href="/ai/community" class="nav-link">Community</a>
+        <a href="/ai/about" class="nav-link">About</a>
         <a href="https://github.com/genai-coach/ai" class="nav-cta" target="_blank" rel="noopener" aria-label="View GenAI Coach on GitHub">
           GitHub
         </a>
@@ -80,10 +81,11 @@
   <div class="nav-backdrop"></div>
   <nav class="mobile-nav" id="mobile-nav" aria-label="Mobile navigation" aria-hidden="true">
     <button class="close-nav" aria-label="Close navigation menu">×</button>
+    <a href="/ai/services" class="mobile-nav-link">Services</a>
     <a href="/ai/courses" class="mobile-nav-link">Courses</a>
     <a href="/ai/projects" class="mobile-nav-link">Projects</a>
-    <a href="/ai/docs" class="mobile-nav-link">Documentation</a>
     <a href="/ai/community" class="mobile-nav-link">Community</a>
+    <a href="/ai/about" class="mobile-nav-link">About</a>
     <a href="https://github.com/genai-coach/ai" class="mobile-nav-cta" target="_blank" rel="noopener" aria-label="View GenAI Coach on GitHub">
       GitHub
     </a>
@@ -163,10 +165,11 @@
         <section class="footer-section">
           <h4>Explore</h4>
           <ul class="footer-links">
+            <li><a href="/ai/services">Services</a></li>
             <li><a href="/ai/courses">Courses</a></li>
             <li><a href="/ai/projects">Projects</a></li>
-            <li><a href="/ai/docs">Documentation</a></li>
             <li><a href="/ai/community">Community</a></li>
+            <li><a href="/ai/about">About</a></li>
           </ul>
         </section>
         <section class="footer-section">
