deploy: 5d36908b9b2d3fdc3c4bbcca7a81d05c909d6307

--- a/about/index.html
+++ b/about/index.html
@@ -210,7 +210,7 @@
 <p>Ready to explore how AI can transform your organization?</p>
 
 <ul>
-  <li><strong>Professional Consultation</strong>: <a href="mailto:contact@genai-coach.ai">Schedule a call</a></li>
+  <li><strong>Professional Consultation</strong>: <a href="mailto:vinc@itu.dk">Schedule a call</a></li>
   <li><strong>Educational Content</strong>: <a href="/ai/courses">Explore courses and resources</a></li>
   <li><strong>Community</strong>: <a href="/ai/community">Join our learning community</a></li>
   <li><strong>Open Source</strong>: <a href="https://github.com/genai-coach/ai">Contribute on GitHub</a></li>
