--- a/courses/index.html
+++ b/courses/index.html
@@ -254,7 +254,7 @@
 <p>Ready to transform your skills and organization with AI?</p>
 
 <div class="hero-actions">
-  <a href="mailto:contact@genai-coach.ai" class="btn btn-primary">Book Training Consultation</a>
+  <a href="mailto:vinc@itu.dk" class="btn btn-primary">Book Training Consultation</a>
   <a href="/ai/services" class="btn btn-secondary">Explore Consulting</a>
 </div>
 
