--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <p class="card-description">
           Schedule a strategic consultation to explore AI opportunities for your organization.
         </p>
-        <a href="mailto:contact@genai-coach.ai" class="btn btn-primary">Book Consultation</a>
+        <a href="mailto:vinc@itu.dk" class="btn btn-primary">Book Consultation</a>
       </article>
       
       <article class="card">
