--- a/projects/index.html
+++ b/projects/index.html
@@ -239,7 +239,7 @@
 <h3 id="for-organizations">For Organizations</h3>
 <p>Ready to implement AI agents in your business?</p>
 <ul>
-  <li><strong>Consultation</strong>: <a href="mailto:contact@genai-coach.ai">Schedule an AI project assessment</a></li>
+  <li><strong>Consultation</strong>: <a href="mailto:vinc@itu.dk">Schedule an AI project assessment</a></li>
   <li><strong>Training</strong>: <a href="/ai/courses">Explore our bootcamp programs</a></li>
   <li><strong>Implementation</strong>: <a href="/ai/services">Request custom development services</a></li>
 </ul>
