--- a/services/index.html
+++ b/services/index.html
@@ -245,7 +245,7 @@
 <p>Ready to transform your business with AI?</p>
 
 <div class="hero-actions">
-  <a href="mailto:contact@genai-coach.ai" class="btn btn-primary">Schedule Consultation</a>
+  <a href="mailto:vinc@itu.dk" class="btn btn-primary">Schedule Consultation</a>
   <a href="/ai/courses" class="btn btn-secondary">Explore Training</a>
 </div>
 
