deploy: b55d6ea00b40a97e8b18b70152059431da014574

--- a/courses/index.html
+++ b/courses/index.html
@@ -115,6 +115,15 @@
           "@type": "Course", 
           "name": "AI Fundamentals",
           "description": "Comprehensive introduction to artificial intelligence and machine learning concepts"
+        },
+        {
+          "@type": "Course",
+          "name": "Lær at bruge AI-agenter",
+          "description": "Professional development program from IT University focusing on practical AI agent implementation for modern businesses",
+          "provider": {
+            "@type": "EducationalOrganization",
+            "name": "IT University of Copenhagen"
+          }
         }
       ]
     },
@@ -308,6 +317,35 @@
   <li>Ethical AI development practices</li>
   <li>Project management for AI initiatives</li>
 </ul>
+
+<h2 id="itu-professional-course-lær-at-bruge-ai-agenter">ITU Professional Course: Lær at bruge AI-agenter</h2>
+<p><em>IT University of Copenhagen - Professional Development</em></p>
+
+<h3 id="learn-to-use-ai-agents">Learn to Use AI Agents</h3>
+
+<p>Building on our successful AI agent course offerings, this professional development program from IT University focuses on practical AI agent implementation for modern businesses.</p>
+
+<h4 id="course-overview">Course Overview</h4>
+<ul>
+  <li><strong>Institution</strong>: IT University of Copenhagen (ITU)</li>
+  <li><strong>Focus</strong>: Practical AI agent usage and implementation</li>
+  <li><strong>Target Audience</strong>: Professionals, developers, and business leaders</li>
+  <li><strong>Approach</strong>: Hands-on learning with real-world applications</li>
+</ul>
+
+<h4 id="key-learning-areas">Key Learning Areas</h4>
+<ul>
+  <li><strong>AI Agent Fundamentals</strong>: Understanding how AI agents work and their capabilities</li>
+  <li><strong>Practical Implementation</strong>: Direct experience building and deploying AI agents</li>
+  <li><strong>Business Integration</strong>: Connecting AI agents to existing workflows and systems</li>
+  <li><strong>Best Practices</strong>: Industry standards for AI agent development and deployment</li>
+  <li><strong>Ethical Considerations</strong>: Responsible AI agent usage and governance</li>
+</ul>
+
+<h4 id="why-this-course">Why This Course?</h4>
+<p>This ITU professional course complements our existing AI education portfolio by providing university-level expertise in AI agent technologies. Perfect for professionals seeking credible, academic-backed training in this rapidly evolving field.</p>
+
+<p><strong>Learn More</strong>: <a href="https://www.itu.dk/Efteruddannelser/ITU-Professional-Courses/Kurser/Laer-at-bruge-AI-agenter">ITU Professional Courses</a></p>
 
 <h2 id="ai-productlab-platform">AI ProductLab Platform</h2>
 <p><em>Interactive Learning Environment - In Development</em></p>
