deploy: fdb9fd8627cb7662f260746fecd35e780bc48470

--- a/courses/index.html
+++ b/courses/index.html
@@ -288,7 +288,7 @@
 <p>Professional AI education designed with a people-first philosophy. From executive workshops to hands-on bootcamps, learn responsibly and build ethically.</p>
 
 <h2 id="featured-course-digital-produktudvikling-med-ai-agenter">Featured Course: Digital Produktudvikling med AI-agenter</h2>
-<p><em>IT University - September 11-12, 2024</em></p>
+<p><em>IT University</em></p>
 
 <h3 id="comprehensive-2-day-intensive">Comprehensive 2-Day Intensive</h3>
 
