deploy: f06be45832e65912ca77eafe6689f60af907dc23

--- a/community/index.html
+++ b/community/index.html
@@ -350,6 +350,7 @@
 <h3 id="events--workshops">Events &amp; Workshops</h3>
 <p>Virtual and in-person learning opportunities:</p>
 <ul>
+  <li><strong><a href="/ai/agentic-live/">Agentic Live Sessions</a></strong>: Bi-weekly 30-minute sessions every second Friday</li>
   <li><strong>Monthly AI Implementation Meetups</strong>: Regular community gatherings</li>
   <li><strong>Quarterly Executive Summits</strong>: Strategic AI leadership events</li>
   <li><strong>Annual Conference</strong>: Comprehensive AI transformation symposium</li>
