--- a/services/index.html
+++ b/services/index.html
@@ -368,6 +368,7 @@
   <li><strong>1:1 Executive Coaching</strong>: Personalized AI leadership development</li>
   <li><strong>Implementation Teams</strong>: Dedicated teams for complex AI projects</li>
   <li><strong>Peer Executive Networks</strong>: Connect with other AI-forward leaders</li>
+  <li><strong><a href="/ai/agentic-live/">Agentic Live</a></strong>: Bi-weekly sessions, webinars, and 1:1 coaching for agentic developers</li>
 </ul>
 
 <h2 id="industry-experience">Industry Experience</h2>
